--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand fw-bold fs-2" href="index.html" style="font-family: 'Cinzel Decorative', cursive;">
-        <img src="/img/crown.png" alt="logo" width="40" height="37" class="d-inline-block align-text-top mx-3">
+        <img src="img/crown.png" alt="logo" width="40" height="37" class="d-inline-block align-text-top mx-3">
         GoAus 
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -60,7 +60,7 @@
   <section>
     <div class="container pt-4">
       <div class="d-sm-flex align-items-center">
-        <img class="rounded-pill img-fluid p-2 order-md-1" id="img" src="/Img/sitting1.jpg" alt="author_photo" style="width: 30%;">
+        <img class="rounded-pill img-fluid p-2 order-md-1" id="img" src="img/sitting1.jpg" alt="author_photo" style="width: 30%;">
         <div class="pe-5" id="line">
           <h1>Ever wondered who built this webpage?</h1>
           <p class="pt-2">Introducing <span class="text-warning">Ugyen Tshering</span>, an optimistic and ambitious 19-year-old pursuing a Bachelor's degree in Computer Science in some part of Asia. Apart from his passion for web development, he also enjoys challenging opponents on the badminton and table tennis courts in his free time.</p>
