--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-dark"> 
     <div class="container"> 
       <a class="navbar-brand fs-2 text-capitalize" href="index.html" style="font-family: 'Cinzel Decorative', cursive;">
-        <img src="/img/crown.png" alt="" width="40" height="37" class="d-inline-block align-text-top mx-3">
+        <img src="img/crown.png" alt="" width="40" height="37" class="d-inline-block align-text-top mx-3">
         G<span class="fs-4">o</span>A<span class="fs-4">us</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
   <section>
     <div class="container pt-4"> 
         <div class="d-flex flex-column flex-md-row align-items-center">
-              <img src="/Img/About Me.svg" class="w-50 justify-content-center" id="img1" alt="">
+              <img src="img/About Me.svg" class="w-50 justify-content-center" id="img1" alt="">
               <div class="offset-1" id="line1">
                 <h1>Looking for a <span class="text-warning">'de facto'</span> to travel to Australia?</h1>
                 <p class="pt-2">Hurray! You are just at the 'Right Place, and on Right Time.' This website is soley intended to make you find your destined de fecto or maybe, even your life partner. This will ease your step in working or studying abroad, especially in Australia.</p>
@@ -66,7 +66,7 @@
 
     <div class="container pt-5">
       <div class="d-flex flex-column flex-md-row align-items-center">
-        <img src="/Img/About Me.svg" class="w-50 justify-content-center order-md-2" id="img2" alt="">
+        <img src="img/About Me.svg" class="w-50 justify-content-center order-md-2" id="img2" alt="">
         <div class="p-4 order-md-1" id="line2">
           <h1>Looking for a <span class="text-warning">de fecto</span> to travel Australia?</h1>
           <p class="pt-2">Hurray! You are just one step closer to finding your life-partner. This website is solely for you, abbreviated as GoAus, meaning "Go Australia." I am grateful that you finally found this webpage. Go search for the right person and also register yourself here.</p>
@@ -76,7 +76,7 @@
 
     <div class="container pt-4"> 
         <div class="d-flex flex-column flex-md-row align-items-center">
-              <img src="/Img/About Me.svg" class="w-50 justify-content-center" id="img1" alt="">
+              <img src="img/About Me.svg" class="w-50 justify-content-center" id="img1" alt="">
               <div class="offset-1" id="line1">
                 <h1>Go and <span class="text-warning">register</span> yourself here!</h1>
                 <p class="pt-2">Hurray! You are just one step closer to finding your life-partner. This website is soley for you, abbreviated as GoAus, meaning "Go Australia." I am grateful that you fianlly found this webpage. Go search for the right person and also register yourself here. </p>
