--- a/male.html
+++ b/male.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand fw-bold fs-2" href="index.html" style="font-family: 'Cinzel Decorative', cursive;">
-              <img src="/img/crown.png" alt="" width="40" height="37" class="d-inline-block align-text-top mx-3">
+              <img src="img/crown.png" alt="" width="40" height="37" class="d-inline-block align-text-top mx-3">
               GoAus
           </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
