--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <div class="container"> 
           <a class="navbar-brand fw-bold fs-2" href="index.html" style="font-family: 'Cinzel Decorative', cursive;">
               <img src="img/crown.png" alt="" width="40" height="37" class="d-inline-block align-text-top mx-3">
-              GoAus
+              G<span class="fs-4">o</span>A<span class="fs-4">us</span>
           </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
